--- a/alacritty.yml
+++ b/alacritty.yml
@@ -36,6 +36,10 @@ colors:
     - { index: 16, color: "0xff9e64" }
     - { index: 17, color: "0xdb4b4b" }
 
+# displaying neovim colorsheme with alacritty
+env:
+  TERM: xterm-256color
+
 # Font configuration (changes require restart)
 font:
   # Normal (roman) font face
@@ -93,11 +97,11 @@ cursor:
 # Startup directory, unset or None for home directory
 working_directory: None
 key_bindings:
-  # use command + backspace for deleting
-  - { key: Back, mods: Super, chars: "\x15" }
+  - { key: Back, mods: Super, chars: "\x15" } # use command + backspace for deleting
   - { key: Space, mods: Control, chars: "\x00" } # https://github.com/alacritty/alacritty/issues/99
   - { key: Right, mods: Alt, chars: "\x1BF" } # jumping words using arrow keys
   - { key: Left, mods: Alt, chars: "\x1BB" } # jumping words using arrow keys
+
 theme: Tokyonight_Storm
 # if you want the bell sound in mac
 # bell:
