--- a/alacritty.yml
+++ b/alacritty.yml
@@ -7,34 +7,34 @@ colors:
   author: Folke
   # Default colors
   primary:
-    background: '0x24283b'
-    foreground: '0xc0caf5'
+    background: "0x24283b"
+    foreground: "0xc0caf5"
 
   # Normal colors
   normal:
-    black: '0x1D202F'
-    red: '0xf7768e'
-    green: '0x9ece6a'
-    yellow: '0xe0af68'
-    blue: '0x7aa2f7'
-    magenta: '0xbb9af7'
-    cyan: '0x7dcfff'
-    white: '0xa9b1d6'
+    black: "0x1D202F"
+    red: "0xf7768e"
+    green: "0x9ece6a"
+    yellow: "0xe0af68"
+    blue: "0x7aa2f7"
+    magenta: "0xbb9af7"
+    cyan: "0x7dcfff"
+    white: "0xa9b1d6"
 
   # Bright colors
   bright:
-    black: '0x414868'
-    red: '0xf7768e'
-    green: '0x9ece6a'
-    yellow: '0xe0af68'
-    blue: '0x7aa2f7'
-    magenta: '0xbb9af7'
-    cyan: '0x7dcfff'
-    white: '0xc0caf5'
+    black: "0x414868"
+    red: "0xf7768e"
+    green: "0x9ece6a"
+    yellow: "0xe0af68"
+    blue: "0x7aa2f7"
+    magenta: "0xbb9af7"
+    cyan: "0x7dcfff"
+    white: "0xc0caf5"
 
   indexed_colors:
-    - { index: 16, color: '0xff9e64' }
-    - { index: 17, color: '0xdb4b4b' }
+    - { index: 16, color: "0xff9e64" }
+    - { index: 17, color: "0xdb4b4b" }
 
 # displaying neovim colorsheme with alacritty
 env:
@@ -95,17 +95,19 @@ cursor:
 # Startup directory, unset or None for home directory
 working_directory: None
 key_bindings:
-  - { key: Back, mods: Super, chars: "\x15" }
-  # use command + backspace for deleting
-  - { key: Space, mods: Control, chars: "\0" }
-  # https://github.com/alacritty/alacritty/issues/99
-  - { key: Right, mods: Alt, chars: "\eF" }
-  # jumping words using arrow keys
-  - { key: Left, mods: Alt, chars: "\eB" }
-  # jumping words using arrow keys
+  - { key: Back, mods: Super, chars: "\x15" } # use command + delete for deleting the whole line
+  # apparently option + backspace to delete a word works out of the box
+
+  # reference: https://gist.github.com/ipatch/7b904877367e015c1a77a741d97bc6d2
+  - { key: Left, mods: Super, chars: "\x1bOH" } # use command + left to go to the starting of the line
+  - { key: Right, mods: Super, chars: "\x1bOF" } # use command + left to go to the starting of the line
+
+  - { key: Space, mods: Control, chars: "\0" } # https://github.com/alacritty/alacritty/issues/99
+
+  - { key: Right, mods: Alt, chars: "\eF" } # jumping words using arrow keys
+  - { key: Left, mods: Alt, chars: "\eB" } # jumping words using arrow keys
 
 theme: Tokyonight_Storm
-
 # if you want the bell sound in mac
 # bell:
 #   command:
